Allow user to modify network settings not enforced by device policy.

* ONC normalizer now removes StaticIPConfig fields that are
overriden by IPAddressConfigType and NameServersConfigType.

* ONC validator validates StaticIPConfig properly (e.g. requires
fields based on IPAddressConfigType and NameServersConfigType)

Bug: 847429
Change-Id: I47fceaaf10f41346afba552a35206fcdb130a887
Reviewed-on: https://chromium-review.googlesource.com/c/1288576
Reviewed-by: Alexander Hendrich <hendrich@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Zakhar Voit <voit@google.com>
Cr-Commit-Position: refs/heads/master@{#613409}
Former-commit-id: e9d087a00c99e2eb1d2654133700dd6b12d15b7a